refactor: use gson instead of jose4j